Fix version control for URLEncoder.